fix: Icons are not being displayed properly on Safari

--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,6 @@ body {
 
 .svg-wrapper {
   > svg {
-    @apply w-full;
     @apply h-full;
   }
 }
